--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Pranay",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "puppeteer": "^22.8.0"
