--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,7 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         
-
-
         {
             "type": "node",
             "request": "launch",
@@ -15,6 +10,13 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\backend\\src\\irctc.js"
+        },
+        {
+            "type": "node-terminal",
+            "name": "Run Script: start",
+            "request": "launch",
+            "command": "npm run start",
+            "cwd": "${workspaceFolder}\\backend"
         }
     ]
 }
