--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,5 +13,5 @@
       }
     ],
     "host_permissions": ["https://www.irctc.co.in/*"],
-    "permissions": ["storage"]
+    "permissions": ["storage","tabs", "activeTab"]
   }
