new implementation file setup wise code commit

--- a/modifiedextension/manifest.json
+++ b/modifiedextension/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.irctc.co.in/nget/train-search"],
-      "js": ["content.js"]
+      "js": ["popup.js"]
     }
   ],
   "background": {
